--- a/mobile.css
+++ b/mobile.css
@@ -394,7 +394,6 @@ p, li, div, h1, h2, h3, h4, h5 {
 #project-lightbox {
   background-position: 0 0, center center !important;
   background-size: auto, cover !important;
-  background-attachment: fixed, fixed !important;
   max-width: 100%;
   padding: 5em 0;
   color: white;
